unpackaged/main/default/objects/Procedure__c/fields/Procedure_Description__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Description__c</fullName>
    <label>Procedure Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>