unpackaged/main/default/objects/Procedure__c/fields/Procedure_Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Internal_Code__c</fullName>
    <label>Procedure Internal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>