unpackaged/main/default/objects/Procedure__c/fields/Product_Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Internal_Code__c</fullName>
    <label>Product Internal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>