unpackaged/main/default/objects/Procedure__c/fields/Product_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Long_Description__c</fullName>
    <label>Product Long Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>