unpackaged/main/default/objects/Procedure__c/fields/Product_Yields__c.field-meta.xml
<CustomField>
    <fullName>Product_Yields__c</fullName>
    <label>Product Yields</label>
    <length>15</length>
    <type>Text</type>
</CustomField>